--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Movies</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reviews_label">Reviews(%1$s)</string>
+    <string name="no_internet_connection_message">You don\'t have internet connection, showing saved data form your last section</string>
+    <string name="error_message">An error occurred while loading data (%1$s), showing saved data form your last section</string>
+    <string name="image_base_url">https://image.tmdb.org/t/p/w500%1$s</string>
+    <string name="popularity_text">%1$s people watching</string>
+
 </resources>
