--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="error_message">An error occurred while loading data (%1$s), showing saved data form your last section</string>
     <string name="image_base_url">https://image.tmdb.org/t/p/w500%1$s</string>
     <string name="popularity_text">%1$s people watching</string>
+    <string name="show_reviews">Show Reviews</string>
 
 </resources>
